About and  User campaign page feedback add

--- a/themes/socialasset/a_ngo-profile.html
+++ b/themes/socialasset/a_ngo-profile.html
@@ -146,12 +146,12 @@
             <div class="ngo-profile-sec-iner width-1115">
               <div class="user-profile-sec-tab">
                 <div class="fl-tabs clearfix">
-                  <button class="tab-link" data-tab="tab-1"><span>MY NGO’S PROFILE</span></button>
+                  <button class="tab-link current" data-tab="tab-1"><span>MY NGO’S PROFILE</span></button>
                   <button class="tab-link" data-tab="tab-2"><span>MY CAMPAIGNS</span></button>
-                  <button class="tab-link current" data-tab="tab-3"><span>CREATE A CAMPAIGN</span></button>
+                  <button class="tab-link" data-tab="tab-3"><span>CREATE A CAMPAIGN</span></button>
                 </div>
               </div>
-              <div id="tab-1" class="fl-tab-content">
+              <div id="tab-1" class="fl-tab-content current">
                 <div class="tab-con-inr">
                   <div class="profile-is-draft">
                     <p><strong>Your profile is DRAFT</strong>   Lorem ipsum donor sit met.</p>
@@ -237,6 +237,14 @@
                               <label for="checkbox-switch4">Lorem ipsum</label>
                             </div>
                           </div>
+                          <div style="height: 15px;"></div>
+                          <hr>
+                          <div class="prib-plr">
+                            <div class="profile-submit-btn submit-btn-lrg profile-submit-btn-center clearfix">
+                              <input type="submit" name="" value="SUBMIT">
+                            </div>
+                          </div>
+
                         </div>
                       </div>
                     </div>
@@ -609,7 +617,7 @@
                   </div>
                 </div>
               </div>
-              <div id="tab-3" class="fl-tab-content current">
+              <div id="tab-3" class="fl-tab-content">
                 <div class="tab-con-inr">
                   <div class="ngo-create-campaign-con">
                     <div class="ngo-create-campaign-con-des-hdr">
