--- a/themes/socialasset/a_user-profile.html
+++ b/themes/socialasset/a_user-profile.html
@@ -146,11 +146,11 @@
             <div class="user-profile-sec-iner width-1115">
               <div class="user-profile-sec-tab">
                 <div class="fl-tabs clearfix">
-                  <button class="tab-link " data-tab="tab-1"><span>My ACCONT</span></button>
-                  <button class="tab-link current" data-tab="tab-2"><span>Contributions</span></button>
+                  <button class="tab-link current" data-tab="tab-1"><span>My ACCONT</span></button>
+                  <button class="tab-link" data-tab="tab-2"><span>Contributions</span></button>
                 </div>
               </div>
-              <div id="tab-1" class="fl-tab-content">
+              <div id="tab-1" class="fl-tab-content current">
                 <div class="tab-con-inr">
                   <div class="tab-con-title">
                     <strong>My Account</strong>
@@ -159,21 +159,37 @@
                     <div class="clearfix tab-con-col-row">
                       <div class="tab-con-col-4">
                         <div class="has-bx-shadow profile-basic-info-bx-cntlr text-center">
-                          <div class="profile-img">
-                            <img src="assets/images/img_avatar.png">
+                          <div class="profile-edit-step-1 profile-img-step-1">
+                            <div class="profile-img">
+                              <img src="assets/images/img_avatar.png">
+                            </div>
                           </div>
-                          <div class="profile-img-edit">
-                            <input type="file" name="" value="" id="choose-file">
-                            <label for="choose-file">
-                              <i><img src="assets/images/plus-icon-2.png"></i>
-                            </label>
+                          <div class="profile-edit-step-2 profile-img-step-2">
+                            <div class="profile-img-edit">
+                              <input type="file" name="" value="" id="choose-file">
+                              <label for="choose-file">
+                                <i><img src="assets/images/plus-icon-2.png"></i>
+                              </label>
+                            </div>
                           </div>
-                          <strong>George Malamatlis</strong>
+                          <strong id="set_username">George Malamatlis</strong>
                           <span>George@webflow.gr</span>
-                          <hr>
-                          <div class="profile-submit-btn flx-btn-center">
-                            <!-- <input type="submit" name="" value="Edit Profile"> -->
-                            <a href="javascript:void(0)">Edit Profile</a>
+                          <div class="fl-input-field-row profile-edit-step-2 clearfix sa-input plr-30 text-left username-filed">
+                            <label>Username</label>
+                            <input id="get_username" type="text" name="">
+                          </div>
+                          <div style="height: 1px"></div>
+                          <hr class="clearfix">
+                          <div class="plr-30">
+                            <div class="profile-submit-btn profile-edit-step-1 flx-btn-center">
+                              <!-- <input type="submit" name="" value="Edit Profile"> -->
+                              <a class="edit-profile-btn" href="javascript:void(0)">Edit Profile</a>
+                            </div>
+                            <div class="profile-submit-btn profile-edit-step-2 flx-btn-center clearfix">
+                              <input type="submit" name="" value="Save Changes">
+                              <!-- <input id="edit-profile-cancle-btn" type="reset" name="" value="Cancel"> -->
+                              <a href="javascript:void(0)" id="edit-profile-cancle-btn" href="#">Cancel</a>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -245,7 +261,7 @@
                   </form>
                 </div>
               </div>
-              <div id="tab-2" class="fl-tab-content current">
+              <div id="tab-2" class="fl-tab-content">
                 <div class="tab-con-inr">
                   <div class="user-profile-1-hdr clearfix">
                     <strong>Contributions</strong>
