--- a/themes/socialasset/index.html
+++ b/themes/socialasset/index.html
@@ -169,6 +169,21 @@
 
 
 
+<section class="cookie-wrp">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="cookie-inner">
+          <h6>COOKIES POLICY</h6>
+          <p>SOCIAL ASSET uses cookies. By using this site, you accept their use.</p>
+          <button class="agree-btn">I AGREE</button>
+        </div>        
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <!-- -- Gap markup--- -->
 <div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
 <div class="margin" data-value='100'></div>
