--- a/themes/socialasset/index.html
+++ b/themes/socialasset/index.html
@@ -159,6 +159,22 @@
             <nav>
               <ul>
                 <li><a href="front-page.html" target="_blank">Home</a></li>
+
+                <li><a href="about-us.html" target="_blank">about us</a></li>
+                <li><a href="contact.html" target="_blank">contact</a></li>
+                <li><a href="faq.html" target="_blank">faq</a></li>
+                
+                <li><a href="terms.html" target="_blank">terms</a></li>
+                <li><a href="user-campaign-list-page.html" target="_blank">user campaign list page</a></li>
+                <li><a href="user-campaign-page.html" target="_blank">user campaign page</a></li>
+                <li><a href="what-we-do.html" target="_blank">what we do</a></li>
+                
+                <li><a href="a_business-profile.html" target="_blank">a business profile</a></li>
+                <li><a href="a_login-businesses.html" target="_blank">a login businesses</a></li>
+                <li><a href="a_login-register.html" target="_blank">a login register</a></li>
+                <li><a href="a_modal.html" target="_blank">a modal</a></li>
+                <li><a href="a_ngo-profile.html" target="_blank">a ngo profile</a></li>
+                <li><a href="a_user-profile.html" target="_blank">a user profile</a></li>
               </ul>
             </nav>
           </div>
