what-we-do fixing

--- a/themes/socialasset/what-we-do.html
+++ b/themes/socialasset/what-we-do.html
@@ -238,16 +238,18 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <div class="wwd-user-sec-inner">
-          <div class="wwd-user-sec-img" style="background: url('assets/images/wwd-user-sec-img.png');">
-            
-          </div>
-          <div class="wwd-user-sec-rgt">
-            <div class="wwd-user-sec-rgt-inner">
-              <div class="wwd-user-sec-rgt-des">
-                <h3>For Users</h3>
-                <p>Access certified courses and <br> publications related to your field</p>
-                <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
+        <div class="wwd-user-sec-wrap">
+          <div class="wwd-user-sec-inner">
+            <div class="wwd-user-sec-img" style="background: url('assets/images/wwd-user-sec-img.png');">
+              
+            </div>
+            <div class="wwd-user-sec-rgt">
+              <div class="wwd-user-sec-rgt-inner">
+                <div class="wwd-user-sec-rgt-des">
+                  <h3>For Users</h3>
+                  <p>Access certified courses and <br> publications related to your field</p>
+                  <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
+                </div>
               </div>
             </div>
           </div>
