--- a/themes/socialasset/about-us.html
+++ b/themes/socialasset/about-us.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head>
   <title>About Us</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8"> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -206,21 +206,21 @@
           <h2>Our Core Values</h2>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 col-12">
+      <div class="col-md-4 col-sm-12">
         <div class="core-value-col-innr">
           <i><img src="assets/images/core-value-icon-1.png" alt=""></i>
           <h6>Transparency</h6>
           <p>We believe in providing our customers with unprecedented visibility for their businesses. </p>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 col-12">
+      <div class="col-md-4 col-sm-12">
         <div class="core-value-col-innr">
           <i><img src="assets/images/core-value-icon-2.png" alt=""></i>
           <h6>networking</h6>
           <p>We believe in providing our customers with unprecedented visibility for their businesses. </p>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 col-12">
+      <div class="col-md-4 col-sm-12">
         <div class="core-value-col-innr">
           <i><img src="assets/images/core-value-icon-3.png" alt=""></i>
           <h6>fresh ideas</h6>
