--- a/themes/socialasset/index.html
+++ b/themes/socialasset/index.html
@@ -169,12 +169,12 @@
                 <li><a href="user-campaign-page.html" target="_blank">user campaign page</a></li>
                 <li><a href="what-we-do.html" target="_blank">what we do</a></li>
                 
-                <li><a href="a_business-profile.html" target="_blank">a business profile</a></li>
-                <li><a href="a_login-businesses.html" target="_blank">a login businesses</a></li>
-                <li><a href="a_login-register.html" target="_blank">a login register</a></li>
-                <li><a href="a_modal.html" target="_blank">a modal</a></li>
-                <li><a href="a_ngo-profile.html" target="_blank">a ngo profile</a></li>
-                <li><a href="a_user-profile.html" target="_blank">a user profile</a></li>
+                <li><a href="a_business-profile.html" target="_blank">business profile</a></li>
+                <li><a href="a_login-businesses.html" target="_blank">login businesses</a></li>
+                <li><a href="a_login-register.html" target="_blank">login register</a></li>
+                <li><a href="a_modal.html" target="_blank">modal</a></li>
+                <li><a href="a_ngo-profile.html" target="_blank">ngo profile</a></li>
+                <li><a href="a_user-profile.html" target="_blank">user profile</a></li>
               </ul>
             </nav>
           </div>
@@ -185,19 +185,15 @@
 
 
 
-<section class="cookie-wrp">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="cookie-inner">
-          <h6>COOKIES POLICY</h6>
-          <p>SOCIAL ASSET uses cookies. By using this site, you accept their use.</p>
-          <button class="agree-btn">I AGREE</button>
-        </div>        
-      </div>
-    </div>
-  </div>
-</section>
+<div id="social-cookie-bar" class="social-cookie-bar">
+  <h6>COOKIES POLICY</h6>
+  <p>SOCIAL ASSET uses cookies. By using this site, you accept their use.</p>
+  <span class="social-cookie-btn">
+    <button id="socialCookie" tabindex="0" onclick="socialAcceptCookies();">I AGREE</button>
+  </span>
+</div>
+
+
 
 
 <!-- -- Gap markup--- -->
