--- a/themes/socialasset/a_ngo-profile.html
+++ b/themes/socialasset/a_ngo-profile.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="assets/fancybox3/dist/jquery.fancybox.min.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="assets/fonts/custom-fonts.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
@@ -163,15 +164,47 @@
                     <div class="clearfix tab-con-col-row">
                       <div class="tab-con-col-4">
                         <div class="has-bx-shadow profile-basic-info-bx-cntlr text-center">
-                          <div class="profile-img">
-                            <img src="assets/images/ngo-logo.png">
+                          <div class="profile-edit-step-1 profile-img-step-1">
+                            <div class="profile-img branding-logo">
+                              <img src="assets/images/ngo-logo.png">
+                            </div>
+                          </div>
+                          <div class="profile-edit-step-2 profile-img-step-2">
+                            <div class="profile-img-edit">
+                              <input type="file" name="" value="" id="choose-file">
+                              <label for="choose-file">
+                                <i><img src="assets/images/plus-icon-2.png"></i>
+                                <span class="file-up-instruction-txt">CLICK TO ADD<br> YOUR LOGO</span>
+                              </label>
+                            </div>
                           </div>
                           <strong>ACTIONAID</strong>
-                          <span>management@actionaid.gr</span>
-                          <span class="status-published-title color-red">STATUS: DRAFT</span>
-                          <hr>
-                          <div class="profile-submit-btn flx-btn-center">
-                            <input type="submit" name="" value="Edit Profile">
+                          <span style="display: block;">management@actionaid.gr</span>
+                          <span class="status-published-title color-red profile-edit-step-1">STATUS: DRAFT</span>
+                          <span class="status-published-title profile-edit-step-2">STATUS: PUBLISHED</span>
+
+                          <div class="plr-30 profile-edit-step-2">
+                              <div class="fl-input-field-row clearfix sa-input text-left username-filed">
+                              <label>Username</label>
+                              <input id="get_username" type="text" name="">
+                            </div>
+                            <div class="fl-input-field-row clearfix sa-input text-left username-filed">
+                              <label>About Your NGO</label>
+                              <textarea placeholder="Type a brief about your NGO"></textarea>
+                            </div>
+                          </div>
+                          <div style="height: 1px"></div>
+                          <hr class="clearfix">
+                          <div class="plr-30">
+                            <div class="profile-submit-btn profile-edit-step-1 flx-btn-center">
+                              <!-- <input type="submit" name="" value="Edit Profile"> -->
+                              <a class="edit-profile-btn" href="javascript:void(0)">Edit Profile</a>
+                            </div>
+                            <div class="profile-submit-btn profile-edit-step-2 flx-btn-center clearfix">
+                              <input type="submit" name="" value="Save Changes">
+                              <!-- <input id="edit-profile-cancle-btn" type="reset" name="" value="Cancel"> -->
+                              <a href="javascript:void(0)" id="edit-profile-cancle-btn" href="#">Cancel</a>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -260,7 +293,7 @@
                         <div class="ngo-archive">
                           <label>Archive</label>
                           <div class="ngo-archive-date">
-                            <input type="date" name="">
+                            <input type="text" name="" id="datepicker">
                             <img src="assets/images/calender.png">
                           </div>
                         </div>
@@ -645,7 +678,7 @@
                             <div class="date-field">
                               <label>From:</label>
                               <div class="date-input">
-                                <input type="date" name="">
+                                <input type="text" name="" id="datepicker2">
                                 <img src="assets/images/calender.png">
                               </div>
                             </div>
@@ -654,7 +687,7 @@
                             <div class="date-field">
                               <label>To:</label>
                               <div class="date-input">
-                                <input type="date" name="">
+                                <input type="text" name="" id="datepicker3">
                                 <img src="assets/images/calender.png">
                               </div>
                             </div>
@@ -728,6 +761,7 @@
 <script src="assets/js/app.js"></script>
 
 <script src="assets/js/nav.js"></script>
+<script src="assets/js/jquery-ui.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
