--- a/themes/socialasset/a_user-profile.html
+++ b/themes/socialasset/a_user-profile.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="assets/fancybox3/dist/jquery.fancybox.min.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="assets/slick.slider/slick.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="assets/fonts/custom-fonts.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
@@ -422,6 +423,7 @@
 <script src="assets/js/app.js"></script>
 
 <script src="assets/js/nav.js"></script>
+<script src="assets/js/jquery-ui.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
