contact page responsive done

--- a/themes/socialasset/contact.html
+++ b/themes/socialasset/contact.html
@@ -243,8 +243,8 @@
           <li><a href="mailto:info@socialasset.gr">info@socialasset.gr</a></li>
         </ul>
         <div class="map-socail">
-          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <div class="map-date">
           <ul>
