icon update on account page

--- a/themes/socialasset/a_ngo-profile.html
+++ b/themes/socialasset/a_ngo-profile.html
@@ -156,6 +156,7 @@
                 <div class="tab-con-inr">
                   <div class="profile-is-draft">
                     <p><strong>Your profile is DRAFT</strong>   Lorem ipsum donor sit met.</p>
+                    <i class="fas fa-times"></i>
                   </div>
                   <div class="tab-con-title">
                     <strong>Account Details</strong>
