--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -266,7 +266,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -296,7 +296,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -330,7 +330,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -360,7 +360,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -394,7 +394,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -424,7 +424,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -458,7 +458,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -488,7 +488,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -522,7 +522,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -552,7 +552,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -586,7 +586,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -616,7 +616,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -650,7 +650,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -680,7 +680,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
@@ -715,7 +715,7 @@
                             </div>
                           </div>
                           <div class="months-left">
-                            <i class="fas fa-clock"></i>
+                            <i class="far fa-clock"></i>
                             <span>3 months left</span>
                           </div>
                         </div>
@@ -745,7 +745,7 @@
                           </div>
                         </div>
                         <div class="months-left">
-                          <i class="fas fa-clock"></i>
+                          <i class="far fa-clock"></i>
                           <span>3 months left</span>
                         </div>
                       </div>
