--- a/themes/socialasset/a_business-profile.html
+++ b/themes/socialasset/a_business-profile.html
@@ -298,7 +298,7 @@
                                     </div>
                                   </div>
                                   <div class="months-left">
-                                    <i class="fas fa-clock"></i>
+                                    <i class="far fa-clock"></i>
                                     <span>3 months left</span>
                                   </div>
                                 </div>
@@ -329,7 +329,7 @@
                                     </div>
                                   </div>
                                   <div class="months-left">
-                                    <i class="fas fa-clock"></i>
+                                    <i class="far fa-clock"></i>
                                     <span>3 months left</span>
                                   </div>
                                 </div>
@@ -360,7 +360,7 @@
                                     </div>
                                   </div>
                                   <div class="months-left">
-                                    <i class="fas fa-clock"></i>
+                                    <i class="far fa-clock"></i>
                                     <span>3 months left</span>
                                   </div>
                                 </div>
