--- a/themes/socialasset/a_login-register.html
+++ b/themes/socialasset/a_login-register.html
@@ -238,9 +238,9 @@
                       <i class="fab fa-google"></i>
                       Sign In with Google
                     </a>
-                    <a class="linkedin-login-btn" href="#">
-                      <i class="fab fa-linkedin-in"></i>
-                      Sign In with LinkedIn
+                    <a class="facebook-login-btn" href="#">
+                      <i class="fab fa-facebook-square"></i>
+                      Sign In with Facebook
                     </a>
                   </div>
                 </form>
