facebook icon update

--- a/themes/socialasset/a_modal.html
+++ b/themes/socialasset/a_modal.html
@@ -73,8 +73,8 @@
                     <i class="fab fa-google"></i>
                     Sign In with Google
                   </a>
-                  <a class="linkedin-login-btn" href="#">
-                    <i class="fab fa-linkedin-in"></i>
+                  <a class="facebook-login-btn" href="#">
+                    <i class="fab fa-facebook-square"></i>
                     Sign In with LinkedIn
                   </a>
                 </div>
