user type select fix

--- a/themes/socialasset/a_login-businesses.html
+++ b/themes/socialasset/a_login-businesses.html
@@ -234,8 +234,8 @@
 <script src="assets/js/nav.js"></script>
 <script src="assets/js/jquery-ui.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/js/account.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
 </html>
-
