footer and icon update

--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -97,8 +97,7 @@
                     </li>
                   </ul>
                 </div>
-              </nav>
-              
+              </nav>              
               <div class="humberger-menu-btn">
                 <strong>MENU</strong>
                 <div class="humberger-menu-btn-lines">
@@ -106,8 +105,7 @@
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              
+              </div>              
             </div>
             <div class="humberger-menu">
               <ul class="clearfix ulc">
@@ -334,6 +332,7 @@
   <span class="hm-wc-social-assets-top-shape"></span> 
 </section>
 
+
 <section class="hm-explore-campaigns-sec">
   <div class="container">
     <div class="row">
@@ -401,7 +400,6 @@
     </div>
   </div>    
 </section>
-
 
 
 <section class="hm-testimonials-sec">
@@ -569,8 +567,8 @@
               </li>
             </ul> 
             <div class="ftr-social">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>        
           </div>
         </div>
@@ -581,7 +579,7 @@
             <div class="nl-from-wrp">
               <form action="">
                 <input type="email" placeholder="Type your email here">
-                <button><i class="fas fa-search"></i></button>
+                <button><i class="fas fa-long-arrow-alt-right"></i></button>
               </form>
             </div>
             <ul class="ulc clearfix">
