--- a/themes/socialasset/user-campaign-page.html
+++ b/themes/socialasset/user-campaign-page.html
@@ -148,22 +148,21 @@
           <div class="miracle-plan-slider-wrp">
             <div class="miraclePlanBigSlider">
               <div class="miraclePlanBigSlider-item">
-                <div class="miraclePlanBigSlider-item-bg" style="background: url('assets/images/miracle-plan-slider-bg.jpg')">
-                  <span><img src="assets/images/miracle-plan-slider-bg.jpg" alt=""></span>
-                </div>
-                <a class="overlay-link" data-fancybox="Miracle Plan" href="assets/images/miracle-plan-slider-bg.jpg"></a>
+                <a class="img-zoom" data-fancybox="Miracle Plan" href="https://www.youtube.com/watch?v=b4Yx9eHfsuc">
+                  <span>
+                    <i><img src="assets/images/plan-play.png" alt=""></i>     
+                  </span>  
+                  <div class="miracle-plan-video-bg" style="background: url('assets/images/miracle-plan-slider-bg.jpg')">
+                  </div>
+                </a>   
               </div>
               <div class="miraclePlanBigSlider-item">
                 <div class="miraclePlanBigSlider-item-bg" style="background: url('assets/images/miracle-plan-slider-bg.jpg')">
-                  <span><img src="assets/images/miracle-plan-slider-bg.jpg" alt=""></span>
                 </div>
-                <a class="overlay-link" data-fancybox="Miracle Plan" href="assets/images/miracle-plan-slider-bg.jpg"></a> 
               </div>
               <div class="miraclePlanBigSlider-item">
                 <div class="miraclePlanBigSlider-item-bg" style="background: url('assets/images/miracle-plan-slider-bg.jpg')">
-                  <span><img src="assets/images/miracle-plan-slider-bg.jpg" alt=""></span>
                 </div>
-                <a class="overlay-link" data-fancybox="Miracle Plan" href="assets/images/miracle-plan-slider-bg.jpg"></a>
               </div>
             </div>
             <div class="miraclePlanthumbSlider">
@@ -210,8 +209,8 @@
                     <span>3 months left</span>
                   </div>
                   <div class="miracle-plan-progress-link-wrp">
-                    <a class="support-btn" href="#">SUPPORT THIS CAMPAIGN</a>
-                    <span class="share-btn" >SHARE <a href="#"><i class="fas fa-share-alt"></i></a></span>
+                    <a class="support-btn" href="#"><i class="far fa-heart"></i>SUPPORT THIS CAMPAIGN</a>
+                    <span class="share-btn" >SHARE <a href="#"></a></span>
                   </div>  
                 </div>
               </div>             
@@ -261,7 +260,7 @@
     <div class="container-lg">
       <div class="row">
         <div class="col-md-6 col-sm-12">
-          <div class="ftr-col-1 ">
+          <div class="ftr-col-1">
             <h5>Get in Touch</h5>
             <ul class="ulc">
               <li>
@@ -275,8 +274,8 @@
               </li>
             </ul> 
             <div class="ftr-social">
-              <a href="#" class="fab fa-facebook-f"></a>
-              <a href="#" class="fab fa-twitter"></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>        
           </div>
         </div>
@@ -287,7 +286,7 @@
             <div class="nl-from-wrp">
               <form action="">
                 <input type="email" placeholder="Type your email here">
-                <button><i class="fas fa-search"></i></button>
+                <button><i class="fas fa-long-arrow-alt-right"></i></button>
               </form>
             </div>
             <ul class="ulc clearfix">
