--- a/themes/socialasset/contact.html
+++ b/themes/socialasset/contact.html
@@ -286,8 +286,8 @@
               </li>
             </ul> 
             <div class="ftr-social">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>        
           </div>
         </div>
@@ -298,7 +298,7 @@
             <div class="nl-from-wrp">
               <form action="">
                 <input type="email" placeholder="Type your email here">
-                <button><i class="fas fa-search"></i></button>
+                <button><i class="fas fa-long-arrow-alt-right"></i></button>
               </form>
             </div>
             <ul class="ulc clearfix">
