--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -600,7 +600,6 @@
   </div>
 </section><!-- end of sa-blog-section -->
 
-
 <footer class="footer-wrp">
   <div class="ftr-main">
     <div class="container-lg">
@@ -620,8 +619,8 @@
               </li>
             </ul> 
             <div class="ftr-social">
-              <a href="#" class="fab fa-facebook-f"></a>
-              <a href="#" class="fab fa-twitter"></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>        
           </div>
         </div>
@@ -632,7 +631,7 @@
             <div class="nl-from-wrp">
               <form action="">
                 <input type="email" placeholder="Type your email here">
-                <button><i class="fas fa-search"></i></button>
+                <button><i class="fas fa-long-arrow-alt-right"></i></button>
               </form>
             </div>
             <ul class="ulc clearfix">
